testsuite/tests/indexed-types/should_fail/T14175.stderr

T14175.hs:7:42: error:
    • Expecting one more argument to ‘k’
      Expected a type, but ‘k’ has kind ‘j -> *’
    • In the kind ‘k’
      In the type family declaration for ‘PComp’
